# lens_shading_editor

./: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenDialog.ui  README.md  Translator.cpp  lensshading.pro  main.cpp
